Fix some more layout issues

--- a/core/ui-src/less/nzbhydra.less
+++ b/core/ui-src/less/nzbhydra.less
@@ -101,11 +101,6 @@ body {
   line-height: normal;
 }
 
-.form-control, .input-group {
-  input {
-    height: 39px;
-  }
-}
 
 .td-embedded:first-child {
   padding-left: 15px;
@@ -132,8 +127,8 @@ a.expand-collapse:focus {
 }
 
 .episode-input {
-  border-left-width: 0px !important;
-  border-right-width: 0px !important;
+  border-left-width: 0 !important;
+  border-right-width: 0 !important;
   border-radius: 0;
 }
 
